--- a/draggableadgridview/src/main/AndroidManifest.xml
+++ b/draggableadgridview/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.halohoop.draggableadgridview">
+    package="com.halohoop.draggableadgridview">
 
     <application
         android:allowBackup="true"
